syntax = "proto3";
package pb;
option go_package = "./pb";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UserResultSteam {
    string status = 1;
    User user = 2;
}

message Users{
    // Significa que pode ter vários usuários aqui dentro, ou seja uma lista de Users
    repeated User user = 1;
}

service UserService {
    rpc AddUser(User) returns (User) {}
    rpc AddUserVerboose(User) returns (stream UserResultSteam) {}
    rpc AddUsers(stream User) returns (Users);
}